<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_small"
    android:paddingEnd="@dimen/space_small">
    <TextView
        android:id="@+id/textNewPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_large"
        android:text="@string/labelNuevoPedido"
        android:textSize="25sp" />
    <EditText
        android:id="@+id/textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/labelEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <RadioGroup
        android:id="@+id/radioGroupTypeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonEnvio"
            android:layout_width="189dp"
            android:layout_height="match_parent"
            android:text="@string/labelSend" />

        <RadioButton
            android:id="@+id/radioButtonTakeAway"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:text="@string/labelTakeAway" />
    </RadioGroup>

    <EditText
        android:id="@+id/textAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/adress"
        />

    <Button
        android:id="@+id/btnAddPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddPlate" />

</LinearLayout>