<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_small"
    android:paddingEnd="@dimen/space_small">

    <TextView
        android:id="@+id/textNewPlate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_large"
        android:text="@string/labelNewPlate"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/textTituloPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_large"
        android:ems="10"
        android:hint="@string/labelTitlePlate"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/textDescripcionPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_large"
        android:gravity="fill_horizontal"
        android:hint="@string/labelDescription"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_large"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textPrecioPlato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/labelPrice"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/textCaloriasPlato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/labelCalories"
            android:importantForAutofill="no"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnCamara"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/camera_button_description"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/btnGalleria"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/camera_button_description"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <ImageButton
            android:id="@+id/btnBorrarImagen"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/camera_button_description"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imagenPlato"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_upload_description"
        app:srcCompat="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave" />


</LinearLayout>